# flam-assessment

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.ts
